view/app.css
body {
    margin: 0;
    padding: 0;
    background-color: #000000;
    text-align: center;
    font-family: "Courier New", monospace;
    color: white;
    width: 100%;
}

h1 {
    margin-top: 5px;
    margin-bottom: 5px;
}

#pingBox {
    position: fixed;
    top: 15px;
    right: 25px;
    color: #00FF26;
}

#stageBox {
	display: inline-block;
}

#jumbotron, #statBox {
	display: inline-block;
    height: 600px;
    color: #00FF26;
    width: 200px;
    border: 1px solid #00FF26;
}

#statBox {
    text-decoration: bold;
}

#jumbotron {

}

#statBox p {
	float:left;
	clear: both;
	margin: 2px;
	padding: 0;
	font-size: 20pt;
}

#jumbotron p {
	float: left;
	clear: both;
	margin: 2px;
}

#content {
	display:inline;
}

#charSelector {
	margin: 0;
	padding: 0;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background: #222222;
	opacity: 0.85;
	padding-top: 15%;
	color: red;
	text-decoration: bold;
	font-size: 24pt;
}

#charSelector img {
	margin-left: 40px;
}

#charSelector * {
	opacity: 1;
}

